--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,8 @@
     "baseUrl": "./src"
   },
   "include": [
-    "src"
+    "src/**/*",
+    "src/Components/**/*",
+    "src/Containers/**/*"
   ]
 }
