--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "license": "MIT",
   "devDependencies": {
@@ -15,7 +16,8 @@
     "tailwindcss": "^3.1.3",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
-    "vite-plugin-solid": "^2.2.6"
+    "vite-plugin-solid": "^2.2.6",
+    "gh-pages": "^4.0.0"
   },
   "dependencies": {
     "solid-js": "^1.4.2"
