--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "vite-template-solid",
-  "version": "0.0.0",
+  "name": "jamesdurban.com",
+  "version": "0.0.1",
   "description": "",
+  "homepage": "https://james-d12.github.io/jamesdurban.com",
   "scripts": {
     "start": "vite",
     "dev": "vite",
