--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,7 @@ jobs:
           source: "./dist/*"
           target: "/var/www/test"
           strip_components: 1
+          rm: true 
        
       - uses: appleboy/ssh-action@master
         name: Executing remote command
