--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,16 @@ jobs:
         
       - name: Build
         run: pnpm build
-          
+
+      - uses: appleboy/ssh-action@master
+        name: Create backup of previous iteration.
+        with:
+          host: ${{ secrets.HOST }}
+          USERNAME: ${{ secrets.USERNAME }}
+          PORT: ${{ secrets.PORT }}
+          KEY: ${{ secrets.SSHKEY }}
+          script: cp -r /var/www/jamesdurban.com /var/www/backup/jamesdurban.com-$(date +%F%H%M%S)
+
       - uses: appleboy/scp-action@master
         name: Copy repository contents via scp
         env:
@@ -51,15 +60,6 @@ jobs:
           KEY: ${{ secrets.SSHKEY }}
         with:
           source: "./dist/*"
-          target: "/var/www/test"
+          target: "/var/www/jamesdurban.com"
           strip_components: 1
           rm: true 
-       
-      - uses: appleboy/ssh-action@master
-        name: Executing remote command
-        with:
-          host: ${{ secrets.HOST }}
-          USERNAME: ${{ secrets.USERNAME }}
-          PORT: ${{ secrets.PORT }}
-          KEY: ${{ secrets.SSHKEY }}
-          script: ls
