--- a/package.json
+++ b/package.json
@@ -7,17 +7,15 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "serve": "vite preview"
   },
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.4.7",
-    "gh-pages": "^4.0.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
-    "vite": "^3.0.0",
+    "vite": "^3.0.2",
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
