--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "jamesdurban.com",
-  "version": "0.0.1",
-  "description": "",
-  "homepage": "https://james-d12.github.io/jamesdurban.com",
-  "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.6",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.2",
-    "vite-plugin-solid": "^2.3.0"
-  },
-  "dependencies": {
-    "solid-js": "^1.4.8"
-  }
+    "name": "jamesdurban.com",
+    "version": "0.0.1",
+    "description": "",
+    "homepage": "https://james-d12.github.io/jamesdurban.com",
+    "scripts": {
+        "start": "vite",
+        "dev": "vite",
+        "build": "vite build",
+        "serve": "vite preview",
+        "format": "prettier --write ./src/**.tsx"
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "autoprefixer": "^10.4.8",
+        "postcss": "^8.4.14",
+        "prettier": "2.7.1",
+        "tailwindcss": "^3.1.7",
+        "typescript": "^4.7.4",
+        "vite": "^3.0.4",
+        "vite-plugin-solid": "^2.3.0"
+    },
+    "dependencies": {
+        "solid-js": "^1.4.8"
+    }
 }
