--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,66 +1,66 @@
 name: Deploy
 
-on: 
-  push:
-    branches: [main]
+on:
+    push:
+        branches: [main]
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+    deploy:
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
 
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
+            - name: Install Node.js
+              uses: actions/setup-node@v3
+              with:
+                  node-version: 16
 
-      - uses: pnpm/action-setup@v2.0.1
-        name: Install pnpm
-        id: pnpm-install
-        with:
-          version: 7
-          run_install: false
+            - uses: pnpm/action-setup@v2.0.1
+              name: Install pnpm
+              id: pnpm-install
+              with:
+                  version: 7
+                  run_install: false
 
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        run: |
-          echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
+            - name: Get pnpm store directory
+              id: pnpm-cache
+              run: |
+                  echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
 
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
-        with:
-          path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+            - uses: actions/cache@v3
+              name: Setup pnpm cache
+              with:
+                  path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
+                  key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+                  restore-keys: |
+                      ${{ runner.os }}-pnpm-store-
 
-      - name: Install dependencies
-        run: pnpm install
-        
-      - name: Build
-        run: pnpm build
+            - name: Install dependencies
+              run: pnpm install
 
-      - uses: appleboy/ssh-action@master
-        name: Create backup of previous iteration.
-        with:
-          host: ${{ secrets.HOST }}
-          USERNAME: ${{ secrets.USERNAME }}
-          PORT: ${{ secrets.PORT }}
-          KEY: ${{ secrets.SSHKEY }}
-          script: cp -r /var/www/jamesdurban.com /var/www/backup/jamesdurban.com-$(date +%F%H%M%S)
+            - name: Build
+              run: pnpm build
 
-      - uses: appleboy/scp-action@master
-        name: Copy repository contents via scp
-        env:
-          HOST: ${{ secrets.HOST }}
-          USERNAME: ${{ secrets.USERNAME }}
-          PORT: ${{ secrets.PORT }}
-          KEY: ${{ secrets.SSHKEY }}
-        with:
-          source: "./dist/*"
-          target: "/var/www/jamesdurban.com"
-          strip_components: 1
-          rm: true 
+            - uses: appleboy/ssh-action@master
+              name: Create backup of previous iteration.
+              with:
+                  host: ${{ secrets.HOST }}
+                  USERNAME: ${{ secrets.USERNAME }}
+                  PORT: ${{ secrets.PORT }}
+                  PASSWORD: ${{ secrets.PASSWORD }}
+                  script: cp -r /var/www/jamesdurban.com /var/www/backup/jamesdurban.com-$(date +%F%H%M%S)
+
+            - uses: appleboy/scp-action@master
+              name: Copy repository contents via scp
+              env:
+                  HOST: ${{ secrets.HOST }}
+                  USERNAME: ${{ secrets.USERNAME }}
+                  PORT: ${{ secrets.PORT }}
+                  KEY: ${{ secrets.SSHKEY }}
+              with:
+                  source: './dist/*'
+                  target: '/var/www/jamesdurban.com'
+                  strip_components: 1
+                  rm: true
