--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,9 +47,9 @@ jobs:
               name: Create backup of previous iteration.
               with:
                   host: ${{ secrets.HOST }}
-                  USERNAME: ${{ secrets.USERNAME }}
-                  PORT: ${{ secrets.PORT }}
-                  PASSWORD: ${{ secrets.PASSWORD }}
+                  username: ${{ secrets.USERNAME }}
+                  port: ${{ secrets.PORT }}
+                  password: ${{ secrets.PASSWORD }}
                   script: cp -r /var/www/jamesdurban.com /var/www/backup/jamesdurban.com-$(date +%F%H%M%S)
 
             - uses: appleboy/scp-action@master
