--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,17 +48,17 @@ jobs:
               with:
                   host: ${{ secrets.HOST }}
                   username: ${{ secrets.USERNAME }}
-                  port: ${{ secrets.PORT }}
                   password: ${{ secrets.PASSWORD }}
+                  port: ${{ secrets.PORT }}
                   script: cp -r /var/www/jamesdurban.com /var/www/backup/jamesdurban.com-$(date +%F%H%M%S)
 
             - uses: appleboy/scp-action@master
               name: Copy repository contents via scp
               env:
-                  HOST: ${{ secrets.HOST }}
-                  USERNAME: ${{ secrets.USERNAME }}
-                  PORT: ${{ secrets.PORT }}
-                  KEY: ${{ secrets.SSHKEY }}
+                  host: ${{ secrets.HOST }}
+                  username: ${{ secrets.USERNAME }}
+                  password: ${{ secrets.PASSWORD }}
+                  port: ${{ secrets.PORT }}
               with:
                   source: './dist/*'
                   target: '/var/www/jamesdurban.com'
