--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,13 +54,12 @@ jobs:
 
             - uses: appleboy/scp-action@master
               name: Copy repository contents via scp
-              env:
+              with:
                   host: ${{ secrets.HOST }}
                   username: ${{ secrets.USERNAME }}
                   password: ${{ secrets.PASSWORD }}
                   port: ${{ secrets.PORT }}
-              with:
-                  source: './dist/*'
-                  target: '/var/www/jamesdurban.com'
+                  source: "./dist/*"
+                  target: "/var/www/jamesdurban.com"
                   strip_components: 1
-                  rm: true
+                  rm: true 
