--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,5 +59,5 @@ jobs:
                   username: ${{ secrets.USERNAME }}
                   password: ${{ secrets.PASSWORD }}
                   port: ${{ secrets.PORT }}
-                  source: "./dist/*"
-                  target: "/var/www/jamesdurban.com"
+                  source: './dist/*'
+                  target: '/var/www/jamesdurban.com'
