fixed deploy maybe

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,3 +61,4 @@ jobs:
                   port: ${{ secrets.PORT }}
                   source: './dist/*'
                   target: '/var/www/jamesdurban.com'
+                  strip_components: 1
