--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,4 @@
 {
-    "recommendations": ["esbenp.prettier-vscode", "github.vscode-pull-request-github"]
+  "recommendations": ["astro-build.astro-vscode"],
+  "unwantedRecommendations": []
 }
