--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
-    "name": "jamesdurban.com",
-    "version": "0.0.1",
-    "description": "",
-    "homepage": "https://james-d12.github.io/jamesdurban.com",
-    "scripts": {
-        "start": "vite",
-        "dev": "vite",
-        "build": "vite build",
-        "serve": "vite preview",
-        "format": "prettier --write ./src/**.tsx"
-    },
-    "license": "MIT",
-    "devDependencies": {
-        "autoprefixer": "^10.4.13",
-        "postcss": "^8.4.21",
-        "prettier": "2.8.3",
-        "tailwindcss": "^3.2.4",
-        "typescript": "^4.9.5",
-        "vite": "^4.1.1",
-        "vite-plugin-solid": "^2.5.0"
-    },
-    "dependencies": {
-        "solid-js": "^1.6.10"
-    }
+  "name": "jamesdurban.com",
+  "type": "module",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro",
+    "format": "prettier --write ."
+  },
+  "dependencies": {
+    "@astrojs/tailwind": "^3.0.1",
+    "astro": "^2.0.6",
+    "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.3",
+    "prettier-plugin-astro": "^0.8.0"
+  }
 }
