--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier --write ."
+    "format": "prettier --write --plugin-search-dir=. ."
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.0.1",
-    "astro": "^2.0.14",
+    "astro": "^2.0.16",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
